--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>public git</title>
 </head>
 <body>
+    <h1>My first public git</h1>
+    <p>my favourite site is github</p>
     
 </body>
 </html>
